--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@ body{background:#1a0a00;background-image:repeating-linear-gradient(0deg,transpar
 @keyframes swing{0%,100%{transform:rotate(-5deg)}50%{transform:rotate(5deg)}}
 .ls{width:1px;height:30px;background:#8b6914}.lb{width:22px;height:36px;background:radial-gradient(ellipse at 40% 40%,#ff6b35,#c0392b 60%,#8b1a0a);border-radius:50% 50% 50% 50%/40% 40% 60% 60%;box-shadow:0 0 15px rgba(255,100,50,.8);position:relative}.lg{position:absolute;inset:-8px;background:radial-gradient(circle,rgba(255,150,50,.4),transparent 70%);border-radius:50%}.lt{width:1px;height:12px;background:#b8860b}
 .wrap{max-width:640px;margin:0 auto;padding:80px 24px 40px}
-.paper{background:var(--paper);background-image:radial-gradient(ellipse at 20% 20%,#f0dba8,transparent 50%),radial-gradient(ellipse at 80% 80%,#e8cfa0,transparent 50%),repeating-linear-gradient(transparent,transparent 27px,rgba(180,140,80,.25) 27px,rgba(180,140,80,.25) 28px);border:2px solid var(--wood);border-radius:4px;padding:28px 28px;margin-bottom:20px;box-shadow:0 4px 20px rgba(0,0,0,.4)}
+.paper{background:#fff9f0;border:none;border-radius:0;padding:0;margin-bottom:0;box-shadow:none}
 .header-card{background:var(--paper);background-image:radial-gradient(ellipse at 20% 20%,#f0dba8,transparent 50%),radial-gradient(ellipse at 80% 80%,#e8cfa0,transparent 50%);border:3px solid var(--wood);border-radius:4px;padding:24px 20px;text-align:center;position:relative;margin-bottom:20px;box-shadow:0 4px 20px rgba(0,0,0,.5)}
 .header-card::before{content:"❧";position:absolute;top:8px;left:10px;color:var(--red);font-size:16px}
 .header-card::after{content:"❧";position:absolute;top:8px;right:10px;color:var(--red);font-size:16px;transform:scaleX(-1);display:inline-block}
@@ -29,17 +29,17 @@ body{background:#1a0a00;background-image:repeating-linear-gradient(0deg,transpar
 .bubble::after{content:"";position:absolute;top:-7px;left:32px;width:0;height:0;border-left:6px solid transparent;border-right:6px solid transparent;border-bottom:8px solid #fff9f0}
 .cursor{display:inline-block;width:2px;height:14px;background:var(--red);margin-left:2px;animation:blink .8s step-end infinite;vertical-align:middle}
 @keyframes blink{0%,100%{opacity:1}50%{opacity:0}}
-.form-title{font-size:16px;font-weight:700;color:var(--wood);text-align:center;margin-bottom:20px;letter-spacing:2px}
+.form-title{font-family:"Noto Serif KR",serif;font-size:18px;font-weight:900;color:#2c1a0e;padding:20px 20px 4px;letter-spacing:1px}
 .form-title span{color:var(--red)}
-.field{margin-bottom:18px}
-.label{display:block;font-size:13px;font-weight:700;color:var(--wood);margin-bottom:6px;letter-spacing:1px}
+.field{padding:18px 20px;border-bottom:1px solid rgba(139,94,60,.12);background:#fff9f0}
+.label{font-size:13px;font-weight:700;color:#5c3a1e;margin-bottom:8px;display:block;letter-spacing:.3px}
 .row{display:flex;gap:8px}
 input,select{background:rgba(255,255,255,.65);border:1.5px solid var(--smoke);border-radius:4px;padding:12px 14px;font-family:"Gowun Dodum",sans-serif;font-size:16px;color:var(--ink);outline:none;width:100%;-webkit-appearance:none;appearance:none}
 input:focus,select:focus{border-color:var(--red);box-shadow:0 0 0 3px rgba(192,57,43,.15)}
 select{background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='8'%3E%3Cpath d='M1 1l5 5 5-5' stroke='%236b3a1f' stroke-width='2' fill='none' stroke-linecap='round'/%3E%3C/svg%3E");background-repeat:no-repeat;background-position:right 10px center;background-color:rgba(255,255,255,.65);padding-right:28px}
-.gbtn{flex:1;padding:10px;background:rgba(255,255,255,.5);border:1.5px solid var(--smoke);border-radius:4px;font-family:"Gowun Dodum",sans-serif;font-size:14px;color:var(--smoke);cursor:pointer;text-align:center;transition:all .2s;user-select:none}
-.gbtn.on{background:var(--red);border-color:var(--red);color:#fff;font-weight:700}
-.btn-main{width:100%;padding:18px;background:linear-gradient(180deg,#c0392b,#962d22);border:none;border-radius:4px;color:#f5e6c8;font-family:"Noto Sans KR",sans-serif;font-size:20px;font-weight:800;letter-spacing:3px;cursor:pointer;transition:all .2s;box-shadow:0 4px 12px rgba(0,0,0,.4)}
+.gbtn{flex:1;padding:12px 8px;background:#fff;border:1.5px solid rgba(139,94,60,.3);border-radius:8px;font-family:"Noto Sans KR",sans-serif;font-size:14px;font-weight:600;color:#5c3a1e;cursor:pointer;text-align:center;transition:all .2s}
+.gbtn.on{background:linear-gradient(135deg,#8b1a1a,#6b1010);border-color:#8b1a1a;color:#fff}
+.btn-main{width:100%;padding:18px;background:linear-gradient(135deg,#2d1200,#5c2800);border:2px solid #f5c842;border-radius:10px;color:#f5c842;font-family:"Noto Serif KR",serif;font-size:18px;font-weight:800;letter-spacing:1px;cursor:pointer;box-shadow:0 4px 15px rgba(0,0,0,.3);transition:all .2s}
 .btn-main:hover{background:linear-gradient(180deg,#d44235,#a83228);transform:translateY(-1px)}
 .btn-reset{width:100%;padding:12px;background:transparent;border:2px solid var(--paper);border-radius:4px;color:var(--paper);font-family:"Gowun Dodum",sans-serif;font-size:14px;cursor:pointer;margin-bottom:20px}
 .btn-reset:hover{background:rgba(245,230,200,.1)}
@@ -160,7 +160,7 @@ select{background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/
       </select>
     </div>
 
-    <button class="btn-main" onclick="getSaju()">🍶 주모! 사주 좀 봐줘!</button>
+    <div style="padding:20px 20px 24px"><button class="btn-main" onclick="getSaju()">🍶 주모! 사주 좀 봐줘유!</button></div>
   </div>
 
   <div class="paper" id="loading">
