--- a/public/index.html
+++ b/public/index.html
@@ -249,17 +249,20 @@ function cleanTitle(t) {
   return t.replace(/[^가-힣a-zA-Z0-9 🌟💪🎯💕💰🌿🍶·()]/g,"").trim();
 }
 function cleanBody(t) {
+  // 따옴표/특수문자 → 제거 (AI가 쓰면 깨지므로)
+  t = t.replace(/&quot;/g,"").replace(/&#39;/g,"").replace(/&amp;/g,"그리고").replace(/&lt;/g,"").replace(/&gt;/g,"");
+  t = t.replace(/["']/g,"");
   t = t.replace(/#+\s*/g,"").replace(/\*+/g,"");
   var emojis = ["\uD83C\uDF1F","\uD83D\uDCAA","\uD83C\uDFAF","\uD83D\uDC95","\uD83D\uDCB0","\uD83C\uDF3F","\uD83C\uDF76"];
   var ph = {};
   emojis.forEach(function(e,i){ var k="__E"+i+"__"; ph[k]=e; t=t.split(e).join(k); });
   t = t.split("").filter(function(c){
     var code = c.charCodeAt(0);
-    return (code >= 0xAC00 && code <= 0xD7A3) || // 한글
-           (code >= 65 && code <= 90) || (code >= 97 && code <= 122) || // 영문
-           (code >= 48 && code <= 57) || // 숫자
+    return (code >= 0xAC00 && code <= 0xD7A3) ||
+           (code >= 65 && code <= 90) || (code >= 97 && code <= 122) ||
+           (code >= 48 && code <= 57) ||
            " .,!?~-()%\n\r_".indexOf(c) >= 0 ||
-           c === "\u00B7" || c === "\u2026" || c === "\u2019";
+           c === "\u00B7" || c === "\u2026";
   }).join("");
   t = t.replace(/\(\s*\)/g,"");
   t = t.replace(/  +/g," ");
@@ -463,7 +466,7 @@ function renderResult(saju, reading, name) {
   // 합충파
   if (relArr.length > 0) {
     html += "<div class=\"hcp-wrap\"><div class=\"hcp-lbl\">합 충 파</div><div class=\"hcp-tags\">";
-    relArr.forEach(function(r){ html += "<span class=\"hcp-tag\">"+cleanBody(escHtml(r))+"</span>"; });
+    relArr.forEach(function(r){ html += "<span class=\"hcp-tag\">"+cleanBody(r)+"</span>"; });
     html += "</div></div>";
   }
 
@@ -492,7 +495,7 @@ function renderResult(saju, reading, name) {
   if (cur) sections.push(cur);
 
   sections.forEach(function(s, secIdx) {
-    var bodyLines = s.body.map(function(l){return cleanBody(escHtml(l));}).filter(function(l){return l.length>0;});
+    var bodyLines = s.body.map(function(l){return cleanBody(l);}).filter(function(l){return l.length>0;});
     var summaryLine = "";
     var bodyContent = "";
     if (bodyLines.length > 0) {
